--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ python-dotenv>=1.0.0
 pydantic>=2.0.0
 requests>=2.31.0
 slack_sdk>=3.20.0
-google-generativeai>=0.3.0
-anthropic>=0.18.0
 twilio>=9.0.0
 python-multipart>=0.0.9
+langchain>=0.3.0
+langchain-google-genai>=2.0.0
