--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi>=0.100.0
 uvicorn>=0.23.0
 python-dotenv>=1.0.0
 pydantic>=2.0.0
+pydantic-settings>=2.0.0
 requests>=2.31.0
 slack_sdk>=3.20.0
 twilio>=9.0.0
